# coreason-refinery

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  Vignette.md  debug_regex.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
docs/: index.md  product_requirements.md
src/coreason_refinery/: __init__.py  chunking.py  main.py  models.py  parsing.py  pipeline.py  segmentation.py  server.py
src/coreason_refinery/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  mocks.py  test_chunking.py  test_chunking_edge_cases.py  test_chunking_enhanced.py  test_chunking_markdown.py  test_main.py  test_models.py  test_parsing.py  test_parsing_csv.py  test_parsing_excel.py  test_parsing_unstructured.py  test_pipeline.py  test_pipeline_async.py  test_segmentation.py  test_segmentation_complex.py  test_segmentation_edge_cases.py  test_segmentation_edge_cases_extended.py  test_segmentation_enhanced.py  test_segmentation_markdown.py  test_segmentation_robustness.py  test_segmentation_stories.py  test_server.py  test_utils.py
