[tool.poetry]
name = "coreason_refinery"
version = "0.2.2"
description = "industrial processing plant for data ingestion"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_refinery", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
loguru = "^0.7.2"
pydantic = "^2.12.5"
unstructured = "^0.18.31"
pdfminer-six = "^20260107"
pi-heif = "^1.2.0"
unstructured-inference = "^1.1.7"
pdf2image = "^1.17.0"
pandas = "^3.0.0"
openpyxl = "^3.1.5"
tabulate = "^0.9.0"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
python-multipart = "^0.0.22"
anyio = "^4.12.1"
httpx = "^0.28.1"
numba = "^0.61.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.14"
pre-commit = "^4.5.1"
pytest-cov = "^7.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.1"
mypy = "^1.19.1"
pydantic = "^2.12.5"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_refinery"
version = "0.2.2"
description = "industrial processing plant for data ingestion"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_refinery"
Repository = "https://github.com/CoReason-AI/coreason_refinery"
Documentation = "https://github.com/CoReason-AI/coreason_refinery"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["coreason_refinery"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
